# qtextpad

./: CMakeLists.txt  README.md  aboutdialog.cpp  app_winrc.h.in  appsettings.cpp  appsettings.h  appveyor.yml  charsets.cpp  charsets.h  cp437codec.cpp  definitiondownload.cpp  definitiondownload.h  ftdetect.cpp  ftdetect.h  indentsettings.cpp  indentsettings.h  main.cpp  qtextpad.desktop  qtextpad.pro  qtextpad.qrc  qtextpad.rc  qtextpadwindow.cpp  qtextpadwindow.h  searchdialog.cpp  searchdialog.h  settingspopup.cpp  settingspopup.h  syntaxhighlighter.cpp  syntaxhighlighter.h  syntaxtextedit.cpp  syntaxtextedit.h  undocommands.cpp  undocommands.h
.github/workflows/: macos-ci.yml  ubuntu-ci.yml  win-ci.yml
cmake/: FindMagic.cmake
icons/: qtextpad.icns
icons/qtextpad/: index.theme
lib/: CMakeLists.txt  charsets.cpp  charsets.h  cp437codec.cpp  cp437codec_p.h  filetypeinfo.cpp  filetypeinfo.h  kf_version.h  syntaxhighlighter.h  syntaxtextedit.cpp  syntaxtextedit.h
src/: CMakeLists.txt  aboutdialog.cpp  aboutdialog.h  activationlabel.h  app_winrc.h.in  appsettings.cpp  appsettings.h  charsets.cpp  definitiondownload.cpp  definitiondownload.h  filetypeinfo.cpp  filetypeinfo.h  ftdetect.h  indentsettings.h  main.cpp  qtextpad.qrc  qtextpadwindow.cpp  qtextpadwindow.h  searchdialog.cpp  searchdialog.h  settingspopup.cpp  settingspopup.h  undocommands.cpp  undocommands.h
src/icons/qtextpad/: index.theme
src/icons/qtextpad-dark/: index.theme
win32/: setup-arm64.iss  setup-x64.iss  setup.iss
